===== CHANGELOG =====
Zollern Galaxy v2.0.32
=====================

* Added Astros as a moon of Eden, the mod's first moon.
    - The moon appears in Eden's night sky.
    - Eden's SkyProvider has been adjusted to show the Astros moon in its night skies.
* Sugar can now be crafted into Sugar Blocks and vice versa.
* Adjusted relative orbit times and distance from center.
* 
* Fixed Purgot Dirt potentially showing up on Zollus.
* 