@@ -1,0 +1,21 @@
+/**
+ * Zollern Galaxy by @author Zollern Wolf
+ * Copyright 2016 - 2025
+ * You may use this code to learn from,
+ * but do not claim it as your own, and
+ * do not redistribute it.
+ */
+package zollerngalaxy.celestial;
+
+public class Galaxy {
+	
+	protected String galaxyName;
+	
+	public Galaxy(String nameIn) {
+		this.galaxyName = nameIn;
+	}
+	
+	public String getGalaxyName() {
+		return galaxyName;
+	}
+}
