@@ -1,0 +1,13 @@
+/**
+ * Zollern Galaxy by @author Zollern Wolf
+ * Copyright 2016 - 2025
+ * You may use this code to learn from,
+ * but do not claim it as your own, and
+ * do not redistribute it.
+ */
+package zollerngalaxy.celestial;
+
+public class GalaxyListZG {
+	
+	public static final String MILKY_WAY = "milky_way";
+}
