@@ -8,6 +8,7 @@
 package zollerngalaxy.lib;
 
 import java.util.Arrays;
+import com.mjr.extraplanets.Constants;
 import net.minecraftforge.fml.common.ModMetadata;
 import zollerngalaxy.lib.helpers.ZGHelper;
 
@@ -32,6 +33,14 @@ public class ZGInfo {
 	
 	public static final int SPACE_STATION_LOWER_Y_LIMIT = 10;
 	public static final int SPACE_STATION_HIGHER_Y_LIMIT = 1200;
+	
+	public static final float RADIANS_TO_DEGREES = 180F / 3.1415927F;
+	public static final double RADIANS_TO_DEGREES_D = 180D / Math.PI;
+	
+	public static final float twoPI = Constants.floatPI * 2F;
+	public static final float halfPI = Constants.floatPI / 2F;
+	public static final float quarterPI = Constants.halfPI / 2F;
+	public static final float floatPI = 3.1415927F;
 	
 	public static void init(ModMetadata info) {
 		info.autogenerated = false;
