@@ -5,8 +5,12 @@ Zollern Galaxy v2.0.32
 * Added Astros as a moon of Eden, the mod's first moon.
     - The moon appears in Eden's night sky.
     - Eden's SkyProvider has been adjusted to show the Astros moon in its night skies.
+* Added the Andromeda galaxy.
 * Sugar can now be crafted into Sugar Blocks and vice versa.
 * Adjusted relative orbit times and distance from center.
+* Four unused star systems have been moved to the new Andromeda galaxy.
+    - So far, it seems that the only way to access these is through MJRLegend's Extra Planets mod.
+        - This will be tested further in the future.
 * 
 * Fixed Purgot Dirt potentially showing up on Zollus.
 * 
